<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/explore"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_livechat"
            android:icon="@drawable/live"
            android:title="@string/liveChat" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/wishlist"
            android:title="@string/wishList" />
        <item
            android:id="@+id/nav_emagazine"
            android:icon="@drawable/emagazine"
            android:title="@string/emagazine" />
    </group>
</menu>
